# sgx-lkl

./: .dockerignore  .gitignore  .gitmodules  .lgtm.yml  .travis.yml  CMakeGraphVizOptions.cmake  CMakeLists.txt  COPYING  Dockerfile  Makefile  README.md  RELEASE.md  config.glibc.mak  config.mak  config.musl.mak  deploy_container_test.sh  oeenclave.mak  pyproject.toml  sgx-lkl-docker.sh  sgx-lkl-musl-Makefile
.azure-pipelines/: azure-pipelines-master.yml  azure-pipelines-nightly.yml  azure-pipelines-release.yml  azure-pipelines.deb.yml  azure-pipelines.yml  template.yml
.azure-pipelines/other/: disabled_tests.txt  failure_identifiers.txt  nightly_run_only_tests.txt
.azure-pipelines/scripts/: build.sh  build_docker.sh  build_docker_images.sh  checkout_submodules.sh  cleanup_docker_images.sh  create_deb_apt_repository.sh  create_fsgsbase_dkms_deb_pkg.sh  create_standalone_deb_pkg.sh  create_vmss.sh  disabled_tests.txt  dump_system_info.sh  install_deb_pkg.sh  install_openenclave.sh  install_prerequisites.sh  junit_utils.sh  measure_code_cov.sh  measure_one_cov.sh  run_sample.sh  run_setup.sh  run_test.sh  set_version.sh  test_miniroot.sh  test_runner.sh  test_standalone_deb_pkg.sh  test_utils.sh
.github/: label-issues.yml
apps/helloworld/: Makefile  README.md  helloworld.c
apps/miniroot/: Makefile  README.md  buildenv.sh
cmake/: BuildMetadata.cmake  Constants.cmake  DownloadAndExtract.cmake  Helpers.cmake  Options.cmake  RecursiveCopy.cmake  oeenclave.cmake
cmake/components/: README.md  common.cmake  config.cmake  curl.cmake  devicemapper.cmake  edl.cmake  enclave.cmake  ext2fs.cmake  host.cmake  json.cmake  kernel.cmake  libc.cmake  lkl.cmake  musl.cmake  openenclave.cmake  user.cmake
config/: eeid-params.conf  params.conf
docs/: Architecture.md  BuildSystem.md  Debugging.md  Docker.md  FAQ.md  HostInterface.md  Incompatibilities.md  LKLSchedulingAndPthreadsSupport.md  Networking.md  Secure the Virtio Interface.md  Testing.md  Threading.md
gdb/: README.md  gdb.py  setup.sh
gdb/gdb-sgx-plugin/: gdb_sgx_plugin.py  load_symbol_cmd.py
gdb/ptrace/: Makefile  README.md  se_cdefs.h  se_memory.c  se_memory.h  se_ptrace.c  se_trace.h  se_types.h  sgx_error.h  sgx_key.h  sgx_tcrypto.h  util.h
samples/: README.md  common.sh
scripts/: check-ci  check-linters  format-c-code  format-py-code  generate_syscall_remap.py  make_self_contained.sh  ncore.sh  pre-commit  sgx-lkl.ld
src/: Makefile  sgxlkl.edl
src/attestation/: aesm.c  attest_ias.c
src/ctl/: default_ias_sign_ca_cert.c  sgxlkl_ctl.c  verify_report.c  verify_report.h
src/enclave/: enclave_cert.c  enclave_cert_user.c  enclave_event_channel.c  enclave_init.c  enclave_mem.c  enclave_oe.c  enclave_signal.c  enclave_timer.c  enclave_util.c  gencreds.c  mpmc_queue.c  sgxlkl_app_config.c  sgxlkl_config.c
src/host/: hostcall_interface.c  hostcalls.c  hostmem.c  hostqueues.c  hostsyscallclient.c  hostsyscalls.c  sgx_hostcall_interface.c  sgx_hostcalls.c
src/host_interface/: host_event_channel.c  host_interface_calls.c  timer_dev.c  virtio.c  virtio_blkdev.c  virtio_console.c  virtio_debug.c  virtio_netdev.c
src/include/: aesm.h  attest.h  attest_ias.h  base64.h  bitops.h  enclave_cmd.h  enclave_config.h  enclave_mem.h  enclave_mman.h  enclave_signal.h  hostcall_interface.h  hostcalls.h  hostmem.h  hostqueues.h  hostsyscallclient.h  hostsyscalls.h  ias-ra.h  json_util.h  lthread.h  lthread_int.h  mpmc_queue.h  platform_info_blob.h  queue.h  ring_buff.h  sgx_enclave_config.h  sgx_enclave_report.h  sgx_hostcall_interface.h  sgx_hostcalls.h  sgxlkl_app_config.h  sgxlkl_debug.h  sgxlkl_host_debug.h  sgxlkl_util.h  ticketlock.h  wireguard.h  wireguard_util.h
src/libjson/: README.md  json.c
src/libsgx/: sgx.c  sign.c
src/lkl/: aes.c  disk.c  disk_mem.c  ext4_create.c  jmp_buf.c  lkl_oe.c  lkl_util.c  oe_errno.c  oe_syscall_ocall_stubs.c  posix-host.c  setup.c  syscall-overrides-fstat.c  syscall-overrides-futex.c  syscall-overrides-mem.c  syscall-overrides-sysinfo.c  syscall-overrides.c  unsupported-syscalls.h  virtio.c  virtio_blkdev.c  virtio_console.c  virtio_net.c  virtio_netdev.c
src/main/: load_elf.c  load_elf.h  sgx_lkl_run.c  sgxlkl_config.c  sgxlkl_config.h  sgxlkl_run.c
src/main-oe/: compose_config.c  compose_enclave_config.c  enclave_config.c  env.c  serialize_enclave_config.c  sgxlkl_app_config.c  sgxlkl_evt_chn_cfg.c  sgxlkl_host_config.c  sgxlkl_params.c  sgxlkl_run_oe.c  sgxlkl_util.c
src/sched/: futex.c  lthread.c  sched.c
src/sgx/: enclave_cmd.c  enclave_config.c  enclave_mem.c  enclave_mman.c  enclave_signal.c  gdb_hook.c  sgx.c  sgx_enclave_config.c  sgx_enclave_report.c  sgx_sign.c  sgxlkl_app_config.c  sgxlkl_debug.c  sgxlkl_sign.c  sgxlkl_sign_cmdline.c  sgxlkl_sign_cmdline.h
src/sgx_sign/: sgx_lkl_sign.c  sgx_lkl_sign_cmdline.c
src/shared/: base64.c  env.c  json.c  json_util.c  mpmc_queue.c  ring_buff.c  sgxlkl_app_config.c  sgxlkl_config_json.c  sgxlkl_default_config.c  sgxlkl_enclave_config.c  sgxlkl_enclave_config_gen.c  sgxlkl_util.c  string_list.c  util.c
src/sign/: cmdline.c  cmdline.h  sgx_lkl_sign.c
src/temporary/: ecall_stubs.c
src/user/: init.c
src/vicsetup/: Makefile  README.md  defs.mak  rules.mak  todo.txt
src/wireguard/: wireguard_util.c
tests/: README.md  common.mk
tests/attested_tls/: Makefile  run_scenario.sh
tests/libc/: Makefile  all  run-tests  supported  unsupported
tests/ltp/: Makefile  batch.mk  buildenv.sh  failure_identifiers.txt  ltp_host_config.json  ltp_test_failure_analyzer  ltp_tstapp_enclave_config.json  run_ltp_test.sh
tools/: build_linux_4.17_x86_crypto_modules.sh  compute_table.py  gen_enclave_debug_key.sh  gen_enclave_key.sh  generate_config.py  generate_syscall_remap.py  libsgxlkl.ld  linux_4.17_x86_crypto_modules.config  lkl_bits.c  lkl_syscalls.c  make_self_contained.sh  ncore.sh  sgx-lkl-cfg  sgx-lkl-cfg.py  sgx-lkl-disk  sgx-lkl-docker  sgx-lkl-dotnet  sgx-lkl-eeid  sgx-lkl-java  sgx-lkl-setup  sgx-lkl.ld  sgx_lkl_sign_options.ggo
tools/gdb/: README.md  (+4 more)
user/: Makefile  README.md  enter.c  stubs.c  userargs.h
(+820 files in other folders)
